# river

./: .aider.chat.history.md  .gitignore  AGENTS.md  CLAUDE.md  CONVENTIONS.md  Cargo.toml  DEVNOTES.md  Makefile.toml  README.md  app.rs  clippy.toml  complete_freenet_api_implementation_notes.md  legacy_delegates.toml  rust-toolchain.toml
chatui/: Cargo.toml  Dioxus.toml  mockup.html
chatui/assets/: main.css
chatui/src/: components.rs  example_data.rs  global_context.rs  lib.rs  main.rs  models.rs  util.rs
chatui/src/components/: app.rs  chat_room_modal.rs  chat_rooms.rs  main_chat.rs  member_info.rs  member_info_modal.rs  member_list.rs  mod.rs  modal.rs  user_info.rs  user_list.rs
chatui/src/components/main_chat/: message_input.rs
chatui/src/components/member_info/: invited_by_field.rs  nickname_field.rs
chatui/src/components/member_list/: invite_member_modal.rs
chatui/src/pages/: mod.rs
chatui/src/util/: ecies.rs
cli/: CHANGELOG.md  Cargo.toml  FOR_CLAUDE.md  QUICK_START.md  README.md  REPRODUCE_FREENET_BUG.md  build.rs
cli/contracts/: README.md  room_contract.wasm
cli/examples/: add_github_bot.rs  dump_state.rs
cli/src/: api.rs  config.rs  error.rs  lib.rs  main.rs  output.rs  private_room.rs  storage.rs  version_check.rs
cli/src/commands/: debug.rs  dm.rs  identity.rs  invite.rs  member.rs  message.rs  mod.rs  room.rs
cli/tests/: invitation_flow_test.rs  message_flow.rs  whoami_offline.rs
common/: Cargo.toml  build.rs  legacy_room_contracts.toml
common/src/: ban.rs  chat_delegate.rs  configuration.rs  crypto_values.rs  delta.rs  ecies.rs  key_derivation.rs  lib.rs  logging.rs  member.rs  mention.rs  message.rs  migration.rs  parameters.rs  proptest_tests.rs  room_state.rs  state.rs  summary.rs  util.rs  web_container.rs
common/src/room_state/: ban.rs  configuration.rs  content.rs  direct_messages.rs  dm_body.rs  identity.rs  member.rs  member_info.rs  message.rs  privacy.rs  secret.rs  upgrade.rs  version.rs
common/src/state/: ban.rs  ban_tests.rs  configuration.rs  configuration_tests.rs  member.rs  member_info.rs  member_tests.rs  message.rs  message_tests.rs  test_utils.rs  tests.rs  upgrade.rs  upgrade_tests.rs
common/src/state/tests/: ban_tests.rs  configuration_tests.rs  individual_deltas.rs  member_tests.rs  message_tests.rs  multiple_deltas.rs  test_utils.rs  upgrade_tests.rs
common/src/tests/: proptest_tests.rs
common/tests/: convergence_tests.rs  delegate_key_test.rs  deputy_ban_test.rs  direct_messages_test.rs  direct_messages_wire_format.hex  import_merge_test.rs  memberid_test.rs  migration_test.rs  private_room_test.rs  room_contract_migration_test.rs  stdlib_compat_test.rs  summary_determinism_test.rs
contracts/inbox-contract/: Cargo.toml
contracts/inbox-contract/src/: chain.rs  lib.rs  tests.rs
contracts/inbox-contract/tests/: membership_chain_test.rs
contracts/room-contract/: .rustc_info.json  Cargo.toml
contracts/room-contract/src/: lib.rs
contracts/room-contract/tests/: integration_tests.rs
contracts/room-contract/tests/common/: mod.rs  test_utils.rs
contracts/web-container-contract/: Cargo.toml  NOTES.md  freenet.toml
contracts/web-container-contract/keygen/: Cargo.toml
contracts/web-container-contract/keygen/src/: main.rs
contracts/web-container-contract/src/: lib.rs
contracts/web-container-contract/tests/: integration_tests.rs
contracts/web-container-contract/web-container-tool/: Cargo.toml
contracts/web-container-contract/web-container-tool/src/: main.rs
delegates/chat-delegate/: Cargo.toml  README.md
delegates/chat-delegate/src/: context.rs  handlers.rs  lib.rs  logging.rs  models.rs  subscription.rs  utils.rs  versioning.rs
delegates/chat-delegate/src/subscription/: tests.rs
ui/: .gitignore  Cargo.toml  Dioxus.toml  README.md  build.rs  mockup.html  package-lock.json  package.json
ui/android/res/values/: strings.xml  styles.xml
ui/assets/: bulma.min.css.br  freenet_logo.svg.br  main.css  main.css.br  tailwind.css
ui/assets/fontawesome/css/: all.min.css.br
ui/assets/fontawesome/webfonts/: fa-brands-400.ttf.br  fa-brands-400.woff2.br  fa-regular-400.ttf.br  fa-regular-400.woff2.br  fa-solid-900.ttf.br  fa-solid-900.woff2.br  fa-v4compatibility.ttf.br  fa-v4compatibility.woff2.br
ui/assets/freenet/: gateways.toml  public.nova.gw.pem  public.vega.gw.pem
ui/public/contracts/: chat_delegate.wasm  room_contract.wasm
ui/src/: components.rs  constants.rs  crypto_keys.rs  example_data.rs  freenet_transport.rs  global.css  invites.rs  lib.rs  main.rs  nickname.rs  node_runtime.rs  pending_invites.rs  platform.rs  river-room-creation-bug-analysis.md  river-room-creation-fix.patch  room_data.rs  signing.rs  storage.rs  util.rs
ui/src/components/: app.rs  chat_rooms.rs  conversation.rs  direct_messages.rs  freenet_response_handler.rs  invite_click_interceptor.rs  main_chat.rs  member_info.rs  member_list.rs  members.rs  mention_click_interceptor.rs  room_list.rs
ui/src/components/app/: NOTES.md  chat_delegate.rs  chat_delegate_helpers.rs  contract.rs  document_title.rs  freenet_api.rs  freenet_api.rs.new  freenet_response_handler.rs  mod.rs  notifications.rs  receive_times.rs  room_data.rs  room_state_handler.rs  sync_info.rs  tab_detection.rs
ui/src/components/chat_rooms/: edit_room_modal.rs  room_name_field.rs
ui/src/components/conversation/: emoji_picker.rs  mention.rs  message_actions.rs  (+2 more)
ui/src/storage/: mod.rs  room_storage.rs
ui/src/util/: ecies.rs  name_gen.rs
ui/tests/: connection-status-indicator.spec.ts  copy-clipboard-feedback.spec.ts  dm-archive-ux.spec.ts  dm-thread-modal.spec.ts  hamburger-unread-badge.spec.ts  invitation-sandbox.spec.ts  invite-via-dm-picker.spec.ts  member-info-deputy-tag.spec.ts  message-layout.spec.ts  message-size-gate.spec.ts  mobile-touch-ux.spec.ts  notification-bell.spec.ts  package-lock.json  package.json  playwright.config.ts  portable-invite-code.spec.ts  responsive-layout.spec.ts  room-header-links.spec.ts  room-reorder-touch.spec.ts  room-unread-badge.spec.ts  title-unread-badge.spec.ts  welcome-invite-link.spec.ts
(+108 files in other folders)
