[package]
name = "chatui"
version = "0.1.0"
authors = ["Ian Clarke <ian@freenet.org>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
dioxus = { version = "0.5.6", features = ["web"] }
dioxus-desktop = "0.5.0"
dioxus-logger = "0.5.1"
dioxus-free-icons = { version = "0.8.6", features = ["font-awesome-solid"] }
getrandom = { version = "0.2.15", features = ["js"] }
web-sys = { version = "0.3.64", features = ["HtmlInputElement"] }
