[package]
name = "chatui"
version = "0.1.0"
authors = ["Ian Clarke <ian@freenet.org>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
common = { path = "../common" }
dioxus = { version = "0.5.6", features = ["web", "hooks"] }
dioxus-web = "0.5.6"
dioxus-logger = "0.5.1"
dioxus-free-icons = { version = "0.8.6", features = ["font-awesome-solid", "font-awesome-regular", "font-awesome-brands"] }
dioxus-hooks = "0.5.6"
dioxus-signals = "0.5.7"
getrandom = { version = "0.2.15", features = ["js"] }
web-sys = { version = "0.3.64", features = ["HtmlInputElement"] }
ed25519-dalek = "2.0.0"
manganis = "0.2.2"
chrono = { version = "0.4", features = ["serde"] }
wasm-bindgen = "0.2.73"
freenet-scaffold = { path = "../scaffold" }
log = "0.4.22"
wasm-bindgen-futures = "0.4.43"
markdown = "1.0.0-alpha.21"
aes-gcm = "0.11.0-pre.2"
sha2 = "0.10.8"
x25519-dalek = "2.0.0"
