[package]
name = "river-core"
version.workspace = true
edition.workspace = true
authors = ["Freenet Project"]
description = "Core library for River - decentralized group chat on Freenet"
homepage = "https://github.com/freenet/river"
repository = "https://github.com/freenet/river"
license = "LGPL-3.0"
readme = "../README.md"
keywords = ["freenet", "chat", "p2p", "decentralized", "core"]
categories = ["network-programming", "cryptography"]

[dependencies]
# Serialization
ciborium.workspace = true
serde.workspace = true

# Cryptography
ed25519-dalek = { workspace = true, default-features = false, features = ["alloc", "serde"] }
blake3.workspace = true
bs58.workspace = true

# Utilities
rand = { workspace = true, optional = true }  # Make `rand` optional
getrandom = { version = "0.2.15", optional = true, default-features = false }
base64.workspace = true
data-encoding.workspace = true

# Internal dependencies
freenet-scaffold.workspace = true
freenet-scaffold-macro.workspace = true
freenet-stdlib.workspace = true

[dev-dependencies]
rand.workspace = true
ed25519-dalek = { workspace = true, features = ["rand_core"] }
x25519-dalek.workspace = true
aes-gcm.workspace = true
ciborium.workspace = true
