[package]
name = "river-core"
version.workspace = true
edition.workspace = true
authors = ["Freenet Project"]
description = "Core library for River - decentralized group chat on Freenet"
homepage = "https://github.com/freenet/river"
repository = "https://github.com/freenet/river"
license = "LGPL-3.0-only"
readme = "../README.md"
keywords = ["freenet", "chat", "p2p", "decentralized", "core"]
categories = ["network-programming", "cryptography"]

[dependencies]
# Serialization
ciborium.workspace = true
serde.workspace = true

# Cryptography
ed25519-dalek = { workspace = true, default-features = false, features = ["alloc", "serde"] }
blake3.workspace = true
bs58.workspace = true

# Cryptography (used by the optional `ecies` feature for room-secret distribution)
aes-gcm = { workspace = true, optional = true }
curve25519-dalek = { workspace = true, optional = true }
sha2 = { workspace = true, optional = true }
x25519-dalek = { workspace = true, optional = true }

# Utilities
# `rand` is ONLY pulled into the dep graph when the `ecies-randomized` feature
# is enabled. The chat-delegate must NOT enable `ecies-randomized` — there is
# no working `getrandom` backend in the freenet-core delegate runtime on
# wasm32-unknown-unknown, and pulling getrandom in causes wasm-bindgen
# placeholder imports that wasmtime can't resolve (issue freenet/river#241).
rand = { workspace = true, optional = true }
base64.workspace = true
data-encoding.workspace = true

# Internal dependencies
freenet-scaffold.workspace = true
freenet-scaffold-macro.workspace = true
freenet-stdlib.workspace = true

[features]
default = []
# ECIES helpers for room-secret distribution. Deterministic-only API surface
# (encrypt_secret_for_member, decrypt_*, unseal_*). Off by default so
# room-contract WASM stays small (it doesn't need these). The chat-delegate
# enables ONLY this feature. Critically, `ecies` does NOT pull `rand`
# (and therefore does not pull `getrandom`) so the delegate WASM has no
# wasm-bindgen placeholder imports — see issue freenet/river#241.
ecies = ["dep:aes-gcm", "dep:curve25519-dalek", "dep:sha2", "dep:x25519-dalek"]
# Adds the randomized-helpers surface (generate_room_secret,
# encrypt_with_symmetric_key, seal_bytes) on top of `ecies`. Pulls `rand`
# (and transitively `getrandom`). Only safe to enable in builds with a
# working CSPRNG — i.e. the UI, which runs in a browser, or native tests.
ecies-randomized = ["ecies", "dep:rand"]
# Legacy room-contract migration registry + helpers (freenet/river#292).
# Enabled ONLY by the client crates (river-ui, riverctl). Deliberately OFF for
# the room-contract and chat-delegate WASM builds so the `migration` module is
# never compiled into them — that keeps their WASM bytes (and therefore their
# contract/delegate keys) byte-identical. The recovery logic is a pure client
# concern; the contract itself never derives legacy keys.
migration = []

[build-dependencies]
# Used by build.rs to parse legacy_room_contracts.toml and generate the
# LEGACY_ROOM_CONTRACT_CODE_HASHES registry (freenet/river#292).
serde = { version = "1", features = ["derive"] }
toml = "0.8"

[dev-dependencies]
rand.workspace = true
ed25519-dalek = { workspace = true, features = ["rand_core"] }
x25519-dalek.workspace = true
aes-gcm.workspace = true
ciborium.workspace = true
bincode = "1.3.3"
hex = "0.4"
toml = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
