[package]
name = "river-ui"
version.workspace = true
edition.workspace = true
authors = ["Ian Clarke <ian@freenet.org>"]

[features]
# `web` is the default renderer (WASM in the browser, served as a Freenet
# contract). `mobile` swaps in the wry/tao webview renderer for Android/iOS.
# `dx` activates the feature matching the build platform: `web` for the web
# platform, `mobile` for `--platform android` / `--platform ios`.
default = ["web"]
web = ["dioxus/web"]
mobile = ["dioxus/mobile"]
delegate = [] # Define the delegate feature
example-data = []
no-sync = []

[dependencies]
bs58 = "0.5.0"
serde.workspace = true
# Cryptography
curve25519-dalek.workspace = true
x25519-dalek.workspace = true
# We can use rand_core in the UI crate because the wasm runs in a browser
ed25519-dalek = { workspace = true, features = ["rand_core"] }
sha2.workspace = true
aes-gcm.workspace = true

# Randomness
rand.workspace = true
getrandom = { version = "0.2.15", features = ["js", "wasm-bindgen", "js-sys"], default-features = false }

# UI Framework — renderer selected via the crate's `web`/`mobile` features
# (see [features] above) so the same source builds for web and Android.
dioxus = { version = "0.7.3" }
dioxus-free-icons = { version = "0.10.0", features = ["font-awesome-brands", "font-awesome-regular", "font-awesome-solid"] }

# Web-related
web-sys = { workspace = true, features = [
    "Clipboard",
    "Document",
    "DomTokenList",
    "Element",
    "EventTarget",
    "CssStyleDeclaration",
    "HtmlAnchorElement",
    "HtmlElement",
    "HtmlTextAreaElement",
    "MouseEvent",
    "IntersectionObserver",
    "IntersectionObserverEntry",
    "IntersectionObserverInit",
    "Navigator",
    "Notification",
    "NotificationOptions",
    "NotificationPermission",
    "Storage",
    "VisibilityState",
    "Window",
    "Crypto",
    "Headers",
    "Response",
    "UrlSearchParams"
] }
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
lipsum = "0.9.1"

# Utilities
blake3.workspace = true
chrono.workspace = true
markdown = "1.0.0-alpha.21"
ciborium = "0.2.2"
js-sys = "0.3.64"
thiserror = "2.0.12"
log = "0.4" # Add log crate
# Compile-time gate so `debug!`/`trace!` macros are dropped entirely in
# release builds. This is belt-and-suspenders on top of the runtime
# filter `dioxus_logger` sets up (Info in release, Debug in dev) — if
# that runtime filter ever regresses, the macros still won't emit. See
# https://docs.rs/tracing/latest/tracing/level_filters/index.html#compile-time-filters
tracing = { version = "0.1", default-features = false, features = ["std", "release_max_level_info"] }

# Internal dependencies
river-core = { workspace = true, features = ["ecies", "ecies-randomized", "migration"] }

# Freenet dependencies
freenet-scaffold.workspace = true
freenet-stdlib = { workspace = true, features = ["net"] }

futures = "0.3.30"
futures-timer = "3.0.3"

# Native (non-wasm) deps: tokio drives the synchronizer's spawn_local
# shim and the embedded freenet node. `tokio-tungstenite` is the native
# WebSocket transport that freenet-stdlib's `regular` WebApi uses; River
# also constructs it directly in the native ConnectionManager. Adding
# both here keeps the dep visible to `cargo check` on the host (which is
# what CI's `cargo test -p river-ui --bins` runs against), not only the
# Android build.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
tokio-tungstenite = { version = "0.27", features = ["rustls-tls-native-roots"] }

# Embedded Freenet node, Android-only. Pulls wasmtime + redb + the
# WebSocket client API server in-process so the UI's synchronizer can
# connect to a node running on the device. `freenet 0.2.61` pairs with
# `freenet-stdlib 0.8` (River's workspace pin). See the vendored copy
# at `vendor/freenet/` and the workspace `[patch.crates-io]` entry.
[target.'cfg(target_os = "android")'.dependencies]
freenet = { version = "0.2.61", default-features = false, features = ["redb", "websocket", "wasmtime-backend", "trace"] }
# JNI bridge used to resolve the app's private files dir at runtime via
# `Context.getFilesDir()`. `ndk-context` provides the
# `JavaVM` + `Activity` handles that ndk-glue / wry / tao publish on
# Android startup; we use them as the JNI entry point rather than
# trying to reach into Dioxus's internal renderer state.
jni = "0.21"
ndk-context = "0.1"

# Add this section for the build script
[build-dependencies]
chrono = "0.4"
toml = "0.8"
serde = { version = "1", features = ["derive"] }
