[package]
name = "river-ui"
version.workspace = true
edition.workspace = true
authors = ["Ian Clarke <ian@freenet.org>"]

[features]
default = [] # Add a default feature set if needed, often empty
delegate = [] # Define the delegate feature
# `lipsum` is only used by the (feature-gated) example_data module, so it is an
# optional dependency pulled in only when example-data is enabled.
example-data = ["dep:lipsum"]
no-sync = []

[dependencies]
bs58 = "0.5.0"
serde.workspace = true
# Cryptography
curve25519-dalek.workspace = true
x25519-dalek.workspace = true
# We can use rand_core in the UI crate because the wasm runs in a browser
ed25519-dalek = { workspace = true, features = ["rand_core"] }
sha2.workspace = true
aes-gcm.workspace = true

# Randomness
rand.workspace = true
getrandom = { version = "0.2.15", features = ["js", "wasm-bindgen", "js-sys"], default-features = false }

# UI Framework
dioxus = { version = "0.7.3", features = ["web"] }
# Only `fa_solid_icons` are referenced in the UI (verified by grep). Dropping
# the brands/regular feature sets trims their icon modules from the build.
dioxus-free-icons = { version = "0.10.0", features = ["font-awesome-solid"] }

# Web-related
web-sys = { workspace = true, features = [
    "Clipboard",
    "Document",
    "DomTokenList",
    "Element",
    "EventTarget",
    "CssStyleDeclaration",
    "HtmlAnchorElement",
    "HtmlElement",
    "HtmlTextAreaElement",
    "MouseEvent",
    "IntersectionObserver",
    "IntersectionObserverEntry",
    "IntersectionObserverInit",
    "Navigator",
    "Notification",
    "NotificationOptions",
    "NotificationPermission",
    "Storage",
    "VisibilityState",
    "Window",
    "Crypto",
    "Headers",
    "Response",
    "UrlSearchParams"
] }
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
lipsum = { version = "0.9.1", optional = true }

# Utilities
blake3.workspace = true
chrono.workspace = true
markdown = "1.0.0-alpha.21"
ciborium = "0.2.2"
js-sys = "0.3.64"
thiserror = "2.0.12"
log = "0.4" # Add log crate
# Compile-time gate so `debug!`/`trace!` macros are dropped entirely in
# release builds. This is belt-and-suspenders on top of the runtime
# filter `dioxus_logger` sets up (Info in release, Debug in dev) — if
# that runtime filter ever regresses, the macros still won't emit. See
# https://docs.rs/tracing/latest/tracing/level_filters/index.html#compile-time-filters
tracing = { version = "0.1", default-features = false, features = ["std", "release_max_level_info"] }

# Internal dependencies
river-core = { workspace = true, features = ["ecies", "ecies-randomized", "migration", "mentions"] }

# Freenet dependencies
freenet-scaffold.workspace = true
freenet-stdlib = { workspace = true, features = ["net"] }

futures = "0.3.30"
futures-timer = "3.0.3"

# Add this section for the build script
[build-dependencies]
chrono = "0.4"
toml = "0.8"
serde = { version = "1", features = ["derive"] }
