[package]
name = "room-contract"
version = "0.1.0"
edition = "2021"

[dependencies]
ciborium.workspace = true
serde.workspace = true
ed25519-dalek.workspace = true
# Optional: cleaner ed25519 implementation for WASM
ed25519-compact = { workspace = true, optional = true }
# Dependencies for pure ed25519 verification
curve25519-dalek.workspace = true
sha2.workspace = true
freenet-stdlib.workspace = true
freenet-scaffold.workspace = true
river-core.workspace = true
# Remove explicit getrandom dependency to avoid wasm-bindgen contamination
# Let transitive dependencies handle getrandom as needed

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["freenet-main-contract"]
contract = ["freenet-stdlib/contract"]
freenet-main-contract = []
trace = ["freenet-stdlib/trace"]
# Use ed25519-compact for WASM builds to avoid getrandom contamination
wasm-crypto = ["ed25519-compact"]
