[package]
name = "room-contract"
version = "0.1.0"
edition = "2021"

[dependencies]
ciborium.workspace = true
ed25519-dalek.workspace = true
# Optional: cleaner ed25519 implementation for WASM
ed25519-compact = { workspace = true, optional = true }
# Dependencies for pure ed25519 verification
curve25519-dalek.workspace = true
sha2.workspace = true
freenet-stdlib.workspace = true
freenet-scaffold.workspace = true
river-core.workspace = true
# NOTE: do NOT add `rand` or `getrandom` as a regular dep here. The room
# contract WASM runs in wasmtime which has no `getrandom` backend on
# wasm32-unknown-unknown; pulling those crates in causes wasm-bindgen
# placeholder imports that wasmtime can't resolve (issue freenet/river#241).
# Contracts must be pure (no randomness) anyway — they're deterministic
# state transitions.

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["freenet-main-contract"]
contract = ["freenet-stdlib/contract"]
freenet-main-contract = []
trace = ["freenet-stdlib/trace"]
# Use ed25519-compact for WASM builds to avoid getrandom contamination
wasm-crypto = ["ed25519-compact"]
# Enable networking support for integration tests (WebApi)
net = ["freenet-stdlib/net"]
# Full integration tests that spin up freenet nodes (requires compatible freenet version)
integration-test = ["net"]

[dev-dependencies]
anyhow = "1.0"
freenet = "0.1.179"
once_cell.workspace = true
rand.workspace = true
tempfile = "3.0"
testresult = "0.4"
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = "0.27"
tracing.workspace = true
tracing-subscriber = "0.3"
