[package]
name = "web-container-contract"
version = "0.1.0"
edition = "2021"

[dependencies]
ciborium.workspace = true
serde.workspace = true
ed25519-dalek.workspace = true
rand = { workspace = true, features = ["getrandom"] }
getrandom = { workspace = true, features = ["js"] }
freenet-stdlib.workspace = true
common.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
lto = true
opt-level = 'z'
panic = 'abort'
strip = true

[features]
default = ["freenet-main-contract"]
contract = ["freenet-stdlib/contract"]
freenet-main-contract = []
trace = ["freenet-stdlib/trace"]
