[package]
name = "web-container-contract"
version = "0.1.0"
edition = "2021"

[dependencies]
ciborium.workspace = true
freenet-stdlib.workspace = true
river-common = { workspace = true, default-features = false }

# Fully remove `rand_core` from `ed25519-dalek` for wasm builds
ed25519-dalek = { workspace = true, default-features = false, features = ["alloc", "serde"] }

[dev-dependencies]
# Enable rand feature for tests
ed25519-dalek = { workspace = true, features = ["rand"] }
rand = { workspace = true, default-features = false, features = ["std_rng"] }

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
lto = true
opt-level = 'z'
panic = 'abort'
strip = true

[features]
default = ["freenet-main-contract"]
contract = ["freenet-stdlib/contract"]
freenet-main-contract = []
trace = ["freenet-stdlib/trace"]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rand = { workspace = true, default-features = false, features = ["std_rng"] }

