[package]
name = "web-container-contract"
version = "0.1.0"
edition = "2021"

[dependencies]
byteorder.workspace = true
ciborium.workspace = true
freenet-stdlib.workspace = true
river-common = { workspace = true }
bs58 = { workspace = true }

# Fully remove `rand_core` from `ed25519-dalek` for wasm builds
ed25519-dalek = { workspace = true, default-features = false, features = ["alloc", "serde"] }

[dev-dependencies]
# Enable rand_core feature for tests
ed25519-dalek = { workspace = true, features = ["rand_core"] }
rand = { workspace = true, default-features = false, features = ["std_rng"] }
tar = "0.4"

[lib]
crate-type = ["cdylib", "rlib"]


[features]
default = ["freenet-main-contract"]
contract = ["freenet-stdlib/contract"]
freenet-main-contract = []
trace = ["freenet-stdlib/trace"]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rand = { workspace = true, features = ["std_rng"] }

